# RatLab

./: BUILDING.md  CMakeLists.txt  LICENSE.md
Benchmarks/: CMakeLists.txt  main.cpp
Core/Essentials/: def_configs.hpp  essentials.hpp  platform_configs.hpp  type_configs.hpp
Core/Math/: math_defs.hpp  math_funcs.hpp
Core/Testing/: Benchmarker.hpp  Tester.hpp
Core/Types/: array.hpp  bool.hpp  f32.hpp  f64.hpp  i16.hpp  i32.hpp  i64.hpp  i8.hpp  packed_array.hpp  string.hpp  type_conversion.cpp  u16.hpp  u32.hpp  u64.hpp  u8.hpp  variant.hpp  vector.hpp
Tests/: CMakeLists.txt  main.cpp
cmake/: CompilerConfig.cmake  RatLabConfig.cmake.in
